--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,60 @@
     <title>Acceso Denegado</title>
   </head>
   <body>
-    <h1>Acceso Denegado</h1>
+    <h1>Google Sign In</h1>
+    <hr />
+
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <div
+      id="g_id_onload"
+      data-client_id="651989098516-eipmisrhvbamf3ba4dk1ki4bev4itapj.apps.googleusercontent.com"
+      data-auto_prompt="false"
+      data-callback="handleCredentialResponse"
+    ></div>
+    <div
+      class="g_id_signin"
+      data-type="standard"
+      data-size="large"
+      data-theme="outline"
+      data-text="sign_in_with"
+      data-shape="rectangular"
+      data-logo_alignment="left"
+    ></div>
+
+    <button id="google_signout">Signout</button>
+
+    <script>
+      function handleCredentialResponse(response) {
+        // decodeJwtResponse() is a custom function defined by you
+        // to decode the credential response.
+        //const responsePayload = decodeJwtResponse(response.credential); // Get data of user
+
+        // Google TOKEN: ID_TOKEN
+        const data = { id_token: response.credential };
+
+        fetch("http://localhost:4000/api/auth/google", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify(data),
+        })
+          .then((response) => response.json())
+          .then((response) => {
+            console.log(response);
+            localStorage.setItem("email", response.user.email);
+          })
+          .catch(console.warn);
+      }
+
+      const button = document.getElementById("google_signout");
+
+      button.onclick = () => {
+        google.accounts.id.revoke(localStorage.getItem("email"), (done) => {
+          localStorage.clear();
+          location.reload();
+        });
+      };
+    </script>
   </body>
 </html>
